--- a/client/app/components/home/home.html
+++ b/client/app/components/home/home.html
@@ -1,9 +1,11 @@
 <navbar></navbar>
 <header>
   <hero></hero>
+  
 </header>
 <main>
   <div class="home">
     <h1>Found in {{ $ctrl.name }}.html</h1>
   </div>
+  <list></list>
 </main>
