tryed to add list functions

--- a/client/app/components/home/home.html
+++ b/client/app/components/home/home.html
@@ -1,11 +1,11 @@
 <navbar></navbar>
 <header>
-  <hero></hero>
-  
+  <!-- <hero></hero> -->
+  <list></list>
 </header>
 <main>
   <div class="home">
     <h1>Found in {{ $ctrl.name }}.html</h1>
   </div>
-  <list></list>
+  
 </main>
