--- a/client/app/common/list/list.scss
+++ b/client/app/common/list/list.scss
@@ -1,10 +1,20 @@
 // @import '../common';
 
-// .list {
-//   background-color: $darkBgColor;
+.song_list {
+    border: 1px solid black;
+    position: relative;
+  }
   
-
-//   * {
-//     color: $lightTextColor;
-//   }
-// }
+  #unstyled {
+    list-style: none;
+    /* padding: 2%; */
+  }
+  
+  audio {
+      width: 80%;
+  }
+  
+  
+  .onee {
+      display: inline;
+  }
